# cli-utils

./: .gitignore  .gitmodules  LICENSE  Pipfile  README.md  dl.sh  path.py  pyproject.toml  requirements.txt  setup.py  test_script.sh  tox.ini
.github/workflows/: python-app.yml  python-package.yml
scripts/: .arriva-dispatcher.bash  __init__.py  arriva-dispatcher.bash  arriva.py  asus_fx504_fan_control.py  cf_ddns.py  download.py  ensure_upnp.py  filegen.py  hashgen.py  install_bash_scripts.py  ruin.py  sys_graphs.py  systemd-gen.py  systemd_gen.py  upnp-revoker.py  upnp_revoker.py  visual-rm.py  visual_rm.py  wg_manager.py
scripts/tests/: test_systemd_gen.py  test_upnp_revoker.py
scripts/utils/: .arriva-dispatcher.bash  __init__.py  ensure_upnp_utils.py  generic__rendering.py  generic__shell.py  generic__size.py  loader.py  systemd_gen__gui_utils.py  wg_man.py
src/nex_utils/: README.dev.md  __init__.py  arriva.py  asus_fx504_fan_control.py  cf_ddns.py  cf_dns.py  download.py  ensure_upnp.py  filegen.py  flash.py  hashgen.py  install_bash_scripts.py  matrix_upgrade_room.py  ruin.py  speedtest.py  systemd_gen.py  visual_rm.py  wg_manager.py
src/nex_utils/utils/: __init__.py  ensure_upnp_utils.py  generic__rendering.py  generic__shell.py  generic__size.py  systemd_gen__gui_utils.py  wg_man.py
src/tests/: test_systemd_gen.py
tests/: generate-test-files.bash  test_versions.py
